[package]
name = "rv-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { workspace = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
fs-err = { workspace = true }
rv-dirs = { workspace = true }
seahash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
clap = ["dep:clap"]
