[package]
name = "rv"
version = "0.2.0"
rust-version = "1.88.0"
edition = "2024"
repository = "https://github.com/spinel-coop/rv"
description = "Ruby version management, but fast"
homepage = "https://spinel.coop/rv"
default-run = "rv"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
clap_derive = { workspace = true }
indicatif = { workspace = true, features = ["rayon"] }
miette = { workspace = true, features = ["fancy"] }
owo-colors = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "tracing",
  "macros",
  "rt-multi-thread",
  "io-std",
  "process",
  "fs",
] }
tracing = { workspace = true }
etcetera = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anstream = { workspace = true }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
reqwest = { workspace = true, features = ["stream"] }
flate2 = { workspace = true }
tar = { workspace = true }
rv-cache = { workspace = true, features = ["clap"] }
rv-gem-specification-yaml = { workspace = true }
rv-ruby = { workspace = true }
rv-dirs = { workspace = true }
rv-lockfile = { workspace = true }
camino = { workspace = true }
futures-util = { workspace = true }
current_platform = { workspace = true }
fs-err = { workspace = true }
bytesize = { workspace = true }
shell-escape = { workspace = true }
once_cell = { workspace = true }
rayon-tracing = { workspace = true }
clap_complete = "4.5.57"
clap_complete_nushell = "4.5.8"
url = "2.5.7"
bytes = "1.10.1"
saphyr.workspace = true
sha2.workspace = true
hex = "0.4.3"


[dev-dependencies]
insta = { workspace = true }
tracing-test = { workspace = true }
tempfile = { workspace = true }
assert_fs = { workspace = true }
indoc = { workspace = true }
fs-err = { workspace = true }
camino-tempfile-ext = { workspace = true }
mockito = "1.4.0"
pretty_assertions = { workspace = true }
